--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
     "typeRoots": ["src/types", "./node_modules/@types"]
   },
   "include": ["src/**/*.ts", "index.ts", "static/hibana.ts"],
-  "exclude": ["node_modules", "**/*.spec.ts", "./src/example"]
+  "exclude": ["node_modules", "**/*.spec.ts", "example"]
 }
