--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@bethel-nz/sumi",
-  "version": "0.3.4",
+  "version": "1.0.0",
+  "description": "A blazing fast web framework built on Hono with file-based routing, OpenAPI support, and CLI tooling",
   "bin": {
     "sumi": "bin/sumi-cli.ts"
   },
@@ -8,7 +9,10 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "bun run --watch example/index.ts --hot"
+    "dev": "sumi dev",
+    "start": "sumi start",
+    "test": "bun test",
+    "prepublishOnly": "bun run build"
   },
   "exports": {
     ".": {
@@ -20,21 +24,53 @@
       "require": "./dist/src/lib/router.js",
       "import": "./dist/src/lib/router.js",
       "types": "./dist/src/lib/router.d.ts"
+    },
+    "./testing": {
+      "require": "./dist/src/lib/testing.js",
+      "import": "./dist/src/lib/testing.js",
+      "types": "./dist/src/lib/testing.d.ts"
     }
   },
   "files": [
     "dist",
-    "bin"
+    "bin",
+    "README.md"
   ],
+  "keywords": [
+    "web-framework",
+    "hono",
+    "typescript",
+    "file-based-routing",
+    "openapi",
+    "api",
+    "rest",
+    "zod",
+    "validation"
+  ],
+  "author": "Bethel Nz",
+  "license": "MIT",
+  "homepage": "https://github.com/bethel-nz/sumi#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bethel-nz/sumi.git"
+  },
+  "bugs": {
+    "url": "https://github.com/bethel-nz/sumi/issues"
+  },
   "dependencies": {
-    "@hono/zod-validator": "^0.5.0",
+    "@hono/standard-validator": "^0.1.4",
+    "@hono/zod-validator": "^0.7.2",
+    "@scalar/hono-api-reference": "^0.9.13",
     "@types/prompts": "^2.4.9",
+    "cac": "^6.7.14",
     "chokidar": "^4.0.1",
     "hono": "^4.6.10",
+    "hono-openapi": "^0.4.8",
     "lodash.debounce": "^4.0.8",
     "pino": "^9.5.0",
     "prompts": "^2.4.2",
-    "zod": "^3.22.4",
+    "zod": "^4.0.0",
+    "zod-openapi": "^5.3.0",
     "zodest": "^0.3.2"
   },
   "devDependencies": {
@@ -42,5 +78,8 @@
     "@types/lodash.debounce": "^4.0.9",
     "tsx": "^4.19.2",
     "typescript": "^5.8.3"
+  },
+  "engines": {
+    "bun": ">=1.0.0"
   }
 }
