feat: fix(packaging): bundle CLI to dist and point bin correctly
- Move CLI to src/bin and import from ../lib
- Use bun bundler for JS + tsc for .d.ts only
- Add prepare script and files whitelist (dist only)
- Keep Bun shebang for CLI and make executable
- Mark deps as peer deps where appropriate (hono, zod, etc.)
- Added License .

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "Bundler",
-    "outDir": "./dist",
+    "rootDir": "src",
+    "outDir": "dist",
     "strict": true,
     "skipLibCheck": true,
     "types": ["node", "bun"],
@@ -13,6 +14,6 @@
     "declarationDir": "./dist",
     "typeRoots": ["src/types", "./node_modules/@types"]
   },
-  "include": ["src/**/*", "index.ts", "bin/**/*"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "example/**/*"]
 }
