--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.1",
   "description": "A blazing fast web framework built on Hono with file-based routing, OpenAPI support, and CLI tooling",
   "bin": {
-    "sumi": "bin/sumi-cli.ts"
+    "sumi": "dist/bin/sumi-cli.js"
   },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build:js": "bun build src/bin/sumi-cli.ts --outfile=dist/bin/sumi-cli.js --format=esm --target=bun --external hono --external zod --external @hono/zod-validator --external hono-openapi --external @scalar/hono-api-reference && bun build src/index.ts --outfile=dist/index.js --format=esm --target=bun --external hono --external zod --external @hono/zod-validator --external hono-openapi --external @scalar/hono-api-reference",
+    "build:dts": "tsc",
+    "build": "bun run build:js && bun run build:dts",
+    "prepare": "bun run build",
     "dev": "sumi dev",
     "start": "sumi start",
     "test": "bun test",
@@ -33,8 +36,8 @@
   },
   "files": [
     "dist",
-    "bin",
-    "README.md"
+    "README.md",
+    "LICENSE"
   ],
   "keywords": [
     "web-framework",
