--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,10 @@
     "declarationDir": "./dist",
     "typeRoots": ["src/types", "./node_modules/@types"]
   },
-  "include": ["src/**/*"],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.js",
+    "src/**/*.d.ts"
+  ],
   "exclude": ["node_modules", "dist", "example/**/*"]
 }
