--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "build:js": "bun build src/bin/sumi-cli.ts --outfile=dist/bin/sumi-cli.js --format=esm --target=bun --external hono --external zod --external @hono/zod-validator --external hono-openapi --external @scalar/hono-api-reference && bun build src/index.ts --outfile=dist/index.js --format=esm --target=bun --external hono --external zod --external @hono/zod-validator --external hono-openapi --external @scalar/hono-api-reference",
     "build:dts": "tsc",
-    "build": "bun run build:js && bun run build:dts",
+    "build:assets": "bun ./scripts/copy-assets.mjs",
+    "build": "bun run build:js && bun run build:dts && bun run build:assets",
     "prepare": "bun run build",
     "dev": "sumi dev",
     "start": "sumi start",
