--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,6 @@
     "src/**/*.js",
     "src/**/*.d.ts"
   ],
+  // "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "example/**/*"]
 }
